# Uball_tracking

./: .gitignore  CURRENT_STATUS.md  IMPLEMENTATION_GUIDE.md  LICENSE  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  README.md  VIDEO_PROCESSING_GUIDE.md  basketball_pipeline_mermaid.mermaid  pyproject.toml  requirements.txt  test_phase2_setup.py  test_phase3_setup.py  test_setup.py
config/: deepsort_config.yaml  sam2_config.yaml  yolo_config.yaml
scripts/: download_models.py  download_sam2_models.py  process_and_playback.py  process_short_segment.py  test_full_pipeline.py  test_yolo.py  test_yolo_sam2.py
src/: __init__.py
src/detection/: __init__.py  utils.py  yolo_detector.py
src/pipeline/: __init__.py  basketball_tracker.py  basketball_tracker_bytetrack.py  yolo_sam2_pipeline.py
src/segmentation/: __init__.py  sam2_segmenter.py
src/tracking/: __init__.py  bytetrack_tracker.py  deepsort_tracker.py  feature_extractor.py  kalman_filter.py  utils.py
src/utils/: __init__.py
tests/: __init__.py
